--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,10 @@ tokio = { version = "1", features = [
   "rt-multi-thread",
 ] }
 tower-http = { version = "0.5", features = ["compression-full", "limit"] }
+jwt = "0.16.0"
+hmac = "0.12.1"
+sha2 = "0.10.8"
+once_cell = "1.19.0"
+chrono = "0.4.38"
+base16ct = { version = "0.2.0", features = ["alloc"] }
+itertools = "0.13.0"
